--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node backend/dist/index.js",
     "build": "npx prisma generate --schema=backend/prisma/schema.prisma && tsc -p backend",
+    "postinstall": "npx prisma generate --schema=backend/prisma/schema.prisma",
     "dev": "nodemon backend/src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -32,7 +33,8 @@
     "react-router-dom": "^7.13.0",
     "tailwind-merge": "^3.4.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -44,7 +46,6 @@
     "autoprefixer": "^10.4.24",
     "nodemon": "^3.1.11",
     "postcss": "^8.5.6",
-    "prisma": "^5.22.0",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
