--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node backend/dist/index.js",
-    "build": "npx prisma generate --schema=backend/prisma/schema.prisma && tsc -p backend",
+    "build": "npx prisma generate --schema=backend/prisma/schema.prisma && npx prisma db push --schema=backend/prisma/schema.prisma --accept-data-loss && tsc -p backend",
     "postinstall": "npx prisma generate --schema=backend/prisma/schema.prisma",
     "dev": "nodemon backend/src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
