--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "email-job-scheduler",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "backend/dist/index.js",
   "scripts": {
-    "start": "node backend/dist/index.js",
-    "build": "echo \"🏗️ Starting Full Build...\" && npx prisma generate --schema=backend/prisma/schema.prisma && npx prisma db push --schema=backend/prisma/schema.prisma --accept-data-loss && echo \"⚙️ Compiling Backend...\" && tsc -p backend && echo \"🎨 Building Frontend...\" && cd frontend && npm install && npx rimraf dist && npm run build && echo \"✅ Build Complete!\"",
+    "start": "ts-node backend/src/index.ts",
+    "build": "echo \"🏗️ Starting Backend Build...\" && npx prisma generate --schema=backend/prisma/schema.prisma && npx prisma db push --schema=backend/prisma/schema.prisma --accept-data-loss && echo \"✅ Build Complete!\"",
     "postinstall": "npx prisma generate --schema=backend/prisma/schema.prisma",
     "dev": "nodemon backend/src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -34,7 +34,9 @@
     "tailwind-merge": "^3.4.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -46,8 +48,6 @@
     "autoprefixer": "^10.4.24",
     "nodemon": "^3.1.11",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "tailwindcss": "^4.1.18"
   }
 }
