--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "backend/dist/index.js",
   "scripts": {
-    "start": "ts-node backend/src/index.ts",
-    "build": "echo \"🏗️ Starting Backend Build...\" && npx prisma generate --schema=backend/prisma/schema.prisma && npx prisma db push --schema=backend/prisma/schema.prisma --accept-data-loss && echo \"✅ Build Complete!\"",
+    "start": "npx prisma db push --schema=backend/prisma/schema.prisma --accept-data-loss && ts-node backend/src/index.ts",
+    "build": "echo \"🏗️ Starting Backend Build...\" && npx prisma generate --schema=backend/prisma/schema.prisma && echo \"✅ Build Complete!\"",
     "postinstall": "npx prisma generate --schema=backend/prisma/schema.prisma",
     "dev": "nodemon backend/src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
